# rustracer

./: .gitignore  Cargo.toml  README.md
.github/: Dependabot.yml  dependabot.yml
.github/workflows/: ci.yml
game_ggez/: Cargo.toml
game_ggez/src/: main.rs  poisson.rs
raytracer_core/: Cargo.toml
raytracer_core/src/: camera.rs  lib.rs  rand_range_f64.rs
raytracer_core/src/materials/: dielectric.rs  lambertian_diffuse.rs  material.rs  metal.rs  mod.rs  texture.rs
raytracer_core/src/rendering/: renderer.rs
raytracer_core/src/shapes/: collision.rs  ray.rs  shape.rs  sphere.rs
src/: camera.rs  collision.rs  main.rs  rand_range_f64.rs  ray.rs  renderer.rs  renderer_pixels.rs
src/materials/: lambertian_diffuse.rs  material.rs
src/renderers/: pixels.rs  ppm.rs  renderer.rs
src/shapes/: mod.rs  ray.rs  shape.rs  sphere.rs
standalone/: Cargo.toml
standalone/src/: main.rs
standalone/src/renderers/: mod.rs  pixels.rs  renderer.rs
wasm/: .gitignore  Cargo.toml  README.md
wasm/src/: lib.rs
wasm/web/: index.html  index.js
web/: Cargo.toml  build.rs
web/src/: main.rs
