[package]
name = "raytracer"
version = "0.1.0"
authors = ["Thomas Wilgenbus <thomas.wilgenbus@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 3

[dependencies]
nalgebra = "0.18"
lazy_static = "1.4.0"

[dependencies.rand]
version = "0.7"
features = ["small_rng"]

[dev-dependencies]
flame = "*"
