[package]
name = "raytracer"
version = "0.1.0"
authors = ["Thomas Wilgenbus <thomas.wilgenbus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
debug=true

[dependencies]
nalgebra = "0.18"
lazy_static = "1.4.0"
pixels = { version = "0.0.4"}
winit = { version = "*"}
winit_input_helper = { version = "*"}
env_logger = "0.7.1"
log = { version = "0.4.8", features = [ "release_max_level_warn" ] }

[dependencies.rand]
version = "0.7"
features = ["small_rng"]
