[package]
name = "raytracer_core"
version = "0.1.0"
authors = ["Thomas Wilgenbus <thomas.wilgenbus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.22"
lazy_static = "1.4.0"
image = "0.23.8"

[dependencies.rand]
version = "0.7.*"
features = ["small_rng"]
