[package]
name = "wasm"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.*"
console_error_panic_hook = "*"
raytracer_core = { path = "../raytracer_core"}

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]