[package]
name = "web"
version = "0.1.0"
authors = ["Thierry Berger <thierry.berger@ohm-games.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
async-std = { version = "1.6.3", features = ["attributes"] }
